--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,6 +29,7 @@ subjects:
 - !lcsh 'Goblins -- England -- Lancashire'
 - !lcsh 'Fairy tales -- England -- Lancashire'
 - !lcc 'GR'
+- GITenberg
 tableOfContents: The Skriker -- The unbidden guest -- The fairy's spade -- The King
   of the Fairies -- Mother and child -- The spectral cat -- The captured fairies --
   The pillion lady -- The fairy funeral -- The chivalrous devil -- The enchanted fisherman
